Added a button to the payment picker page to create payment and go to the order preview page.

--- a/src/AvenueClothing.Feature.Transaction.Module/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/ShippingPicker/Rendering.cshtml
@@ -29,7 +29,7 @@
 
 		<div class="control-group margin-top">
 			<div class="controls">
-				<button type="submit" class="btn btn-primary" name="review-product">Save</button>
+				<button type="submit" class="btn btn-primary" name="review-product">Continue to payment options</button>
 			</div>
 		</div>
 		<input type="hidden" name="PaymentMethodId" value="@Model.SelectedShippingMethodId">
