--- a/src/AvenueClothing.Feature.Transaction.Module/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/PaymentPicker/Rendering.cshtml
@@ -1,29 +1,42 @@
-﻿@using System.Web.Mvc.Html
+﻿@using System.Web.Mvc
+@using System.Web.Mvc.Html
 @model AvenueClothing.Feature.Transaction.Module.ViewModels.PaymentPickerViewModel
 @{
 	Layout = null;
 }
 
-<h3>Payment method</h3>
-@if (@Model.AvailablePaymentMethods.Count > 0)
+@using (Html.BeginForm("CreatePayment", "PaymentPicker", FormMethod.Post))
 {
-	foreach (var paymentMethod in @Model.AvailablePaymentMethods)
+	<h3>Payment method</h3>
+	if (@Model.AvailablePaymentMethods.Count > 0)
 	{
-		<label class="radio">
-			@if (paymentMethod.Selected)
-			{
-				@Html.RadioButtonFor(x => x.SelectedPaymentMethodId, paymentMethod.Value, new { @checked = "checked", @class = "js-payment-picker" })
-				<span>@paymentMethod.Text</span>
-			}
-			else
-			{
-				@Html.RadioButtonFor(x => x.SelectedPaymentMethodId, paymentMethod.Value, new { @class = "js-payment-picker" })
-				<span>@paymentMethod.Text</span>
-			}
-		</label>
+		foreach (var paymentMethod in @Model.AvailablePaymentMethods)
+		{
+			<label class="radio">
+				@if (paymentMethod.Selected)
+				{
+					@Html.RadioButtonFor(x => x.SelectedPaymentMethodId, paymentMethod.Value, new { @checked = "checked", @class = "js-payment-picker" })
+					<span>@paymentMethod.Text</span>
+				}
+				else
+				{
+					@Html.RadioButtonFor(x => x.SelectedPaymentMethodId, paymentMethod.Value, new { @class = "js-payment-picker" })
+					<span>@paymentMethod.Text</span>
+				}
+			</label>
+		}
+
+		<div class="control-group margin-top">
+			<div class="controls">
+				<button type="submit" class="btn btn-primary" name="review-product">Continue to order preview</button>
+			</div>
+		</div>
+		<input type="hidden" name="PaymentMethodId" value="@Model.SelectedPaymentMethodId">
 	}
-}
-else
-{
-	<p class="alert">WARNING: No payment methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.</p>
+	else
+	{
+		<p class="alert">
+			WARNING: No payment methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.
+		</p>
+	}
 }
