--- a/src/AvenueClothing.Feature.Catalog.Module/Views/ProductPrice/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/ProductPrice/Rendering.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-<aside class="col-md-5 js-price-calculation" data-price-calculation-url="@Model.CalculatePriceUrl" data-product-sku="@Model.SKU" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
+<aside class="col-md-5 js-price-calculation" data-price-calculation-url="@Model.CalculatePriceUrl" data-variant-price-calculation-url="@Model.CalculateVariantPriceUrl" data-product-sku="@Model.SKU" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
     <p class="item-price" itemprop="price"></p>
     <p class="item-tax">
         <small class="tax">Inc. </small>
