small fix for a wrong js url

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -50,7 +50,7 @@
 	<script src="~/Scripts/js-mini-basket.js"></script>
 	<script src="~/Scripts/js-infinite-scrolling.js"></script>
 	<script src="~/Scripts/uCommerce.demostore.productpage.js"></script>
-    <script src="~/Scripts/js-addresses.js"></script>
+    <script src="~/Scripts/js-address.js"></script>
 	<script src="~/Scripts/js-shipping-picker.js"></script>
     <script src="~/Scripts/js-price-calculation.js"></script>
 	<script src="~/Scripts/js-payment-picker.js"></script>
@@ -63,7 +63,7 @@
 			ShippingPicker.init($(document), $("*"));
 		    PriceCalculation.init($(document), $("*"));
 			PaymentPicker.init($(document), $("*"));
-
+		    Addresses.init($(document), $("*"));
 			ShippingPicker.initCompleted($(document), $("*"));
 			PaymentPicker.initCompleted($(document), $("*"));
 		});
