--- a/src/AvenueClothing.Feature.Transaction.Module/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/BasketPreview/Rendering.cshtml
@@ -127,4 +127,5 @@
 		</table>
 	</div>
 	<button name="send-order" class="pull-xs-right btn btn-secondary btn-lg btn-success" type="submit">Complete Order <i class="icon-arrow-right icon-white"></i></button>
+    <a href="/payment" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
 }
