--- a/src/AvenueClothing.Feature.Transaction.Module/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/ShippingPicker/Rendering.cshtml
@@ -28,9 +28,12 @@
 		}
 
 		<div class="control-group margin-top">
-			<div class="controls">
-				<button type="submit" class="btn btn-primary" name="review-product">Continue to payment options</button>
-			</div>
+		    <div class="controls">
+		        <button type="submit" class="btn btn-primary" name="review-product">Continue to payment options</button>
+		    </div>
+            <div class="controls">
+                <a href="/address" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
+            </div>
 		</div>
 		<input type="hidden" name="PaymentMethodId" value="@Model.SelectedShippingMethodId">
 	}
