New voucher module.

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -9,13 +9,13 @@
 	<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 	<link href="~/Css/uCommerce.demostore.css" rel="stylesheet" />
 	<link href="~/Css/font-awesome.min.css" rel="stylesheet" />
-	@if (!Sitecore.Context.PageMode.IsPageEditor)
+	@if (!Sitecore.Context.PageMode.IsExperienceEditor)
 	{
 		@Html.Sitecore().Placeholder("head")
 	}
 	<title></title>
 </head>
-<body class="header-static @(Sitecore.Context.PageMode.IsNormal ? "" : (Sitecore.Context.PageMode.IsPageEditor ? "pagemode-edit" : "pagemode-preview"))">
+<body class="header-static @(Sitecore.Context.PageMode.IsNormal ? "" : (Sitecore.Context.PageMode.IsExperienceEditor ? "pagemode-edit" : "pagemode-preview"))">
 	<div id="main-container">
 		<header>
 
@@ -50,10 +50,12 @@
 	<script src="~/Scripts/js-mini-basket.js"></script>
 	<script src="~/Scripts/js-infinite-scrolling.js"></script>
 	<script src="~/Scripts/uCommerce.demostore.productpage.js"></script>
-    <script src="~/Scripts/js-address.js"></script>
+	<script src="~/Scripts/js-address.js"></script>
 	<script src="~/Scripts/js-shipping-picker.js"></script>
-    <script src="~/Scripts/js-price-calculation.js"></script>
+	<script src="~/Scripts/js-price-calculation.js"></script>
 	<script src="~/Scripts/js-payment-picker.js"></script>
+	<script src="~/Scripts/js-voucher.js"></script>
+
 	<script>
 		$(document).ready(function () {
 			AddToBasketButton.init($(document), $("*"));
@@ -61,9 +63,11 @@
 			QuantityPicker.init($(document), $("*"));
 			MiniBasket.init($(document), $("*"));
 			ShippingPicker.init($(document), $("*"));
-		    PriceCalculation.init($(document), $("*"));
+			PriceCalculation.init($(document), $("*"));
 			PaymentPicker.init($(document), $("*"));
-		    Addresses.init($(document), $("*"));
+			Addresses.init($(document), $("*"));
+			Voucher.init($(document), $("*"));
+
 			ShippingPicker.initCompleted($(document), $("*"));
 			PaymentPicker.initCompleted($(document), $("*"));
 		});
