--- a/src/AvenueClothing.Feature.Transaction.Module/Views/Voucher/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Transaction.Module/Views/Voucher/Rendering.cshtml
@@ -1,14 +1,11 @@
-﻿@using System.Web.Mvc.Html
+﻿@model AvenueClothing.Feature.Transaction.Module.ViewModels.VoucherViewModel
 @{
 	Layout = null;
 }
-@using (Html.BeginForm("AddVoucher", "Voucher"))
-{
-	<div class="input-group">
-		<input type="text" name="voucher" class="form-control" placeholder="Enter code here" />
-		<span class="input-group-btn">
-			<button name="add-voucher" class="btn btn-secondary btn-nopadding" type="submit"><i class="icon-plus icon-white"></i>Add Voucher</button>
-		</span>
-	</div>
 
-}
+<div class="input-group js-voucher" data-input-class-selector="@Model.InputClassSelector" data-button-class-selector="@Model.ButtonClassSelector">
+	<input id="@Model.InputClassSelector" type="text" name="voucher" class="form-control " placeholder="Enter code here" />
+	<span class="input-group-btn">
+		<button id="@Model.ButtonClassSelector" name="add-voucher" class="btn btn-secondary btn-nopadding" data-voucher-url="@Model.VoucherUrl" data-input-class-selector="@Model.InputClassSelector"><i class="icon-plus icon-white"></i>Add Voucher</button>
+	</span>
+</div>
