Refactored to be a controller rendering to remove sc reference from view.

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
@@ -6,7 +6,7 @@
 	Layout = null;
 }
 
-@helper DisplayCategories(List<CategoryNavigationRenderingViewModel.Category> categories)
+@helper DisplayCategories(IList<CategoryNavigationRenderingViewModel.Category> categories)
 {
 	<ul class="nav nav-pills nav-stacked">
 		@foreach (var category in categories)
