Moved BreadCrum module to a new project and the delete the old one.

--- a/src/AvenueClothing.Project.Navigation.Module/Views/Breadcrumb/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Navigation.Module/Views/Breadcrumb/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.General.Module.ViewModels.BreadcrumbWrapper
+﻿@model AvenueClothing.Project.Navigation.ViewModels.BreadcrumbWrapper
 <ol class="breadcrumb">
     @foreach (var item in Model.SitecoreBreadcrumbs)
     {
