--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Category/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Category/Rendering.cshtml
@@ -9,9 +9,9 @@
 	<h1>@Model.DisplayName</h1>
 	<div class="row">
 		<div class="product-list col-sm-12 col-md-12">
-			@foreach (var productItem in Model.ProductItemGuids)
+			@foreach (var productGuid in Model.ProductItemGuids)
 			{
-				@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productItem })
+				@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productGuid })
 			}
 		</div>
 	</div>
