Use Sc datasource instead of hard code guid when displaying a product list for a category

--- a/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/CategoryNavigation/Rendering.cshtml
@@ -1,7 +1,6 @@
-﻿@using System.Web.Mvc.Html
-@using AvenueClothing.Feature.Catalog.Module.ViewModels
+﻿@using AvenueClothing.Feature.Catalog.Module.ViewModels
 
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryNavigationRenderingViewModel
+@model CategoryNavigationRenderingViewModel
 @{
 	Layout = null;
 }
