Moved the Review section in its own module.

--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.ReviewFormRenderingViewModel
+﻿@model AvenueClothing.Project.UserFeedback.ViewModels.ReviewFormRenderingViewModel
 @using System.Web.Mvc
 @using System.Web.Mvc.Html
 @{
