--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sitecore.Mvc
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.ReviewListRenderingViewModel
+@model AvenueClothing.Project.UserFeedback.ViewModels.ReviewListRenderingViewModel
 
 @{
     Layout = null;
