--- a/src/AvenueClothing.Feature.Catalog.Module/Views/PromotedProducts/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/PromotedProducts/Rendering.cshtml
@@ -8,7 +8,7 @@
 	<div class="product-list col-sm-12 col-md-12">
 		@foreach (var productGuid in Model.ProductGuids)
 		{
-			@Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productGuid });
+			@Html.Sitecore().Rendering(Model.ProductCardRendering, new { productGuid });
 		}
 	</div>
 </div>
