--- a/src/AvenueClothing.Feature.Catalog.Module/Views/Search/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog.Module/Views/Search/Rendering.cshtml
@@ -5,7 +5,7 @@
     <div class="product-list col-sm-12 col-md-12">
         @foreach (var productItem in Model.ProductItemGuids)
         {
-            @Html.Sitecore().Rendering("B82B3313-82E1-4D4D-9C3C-2935E1E6E0C0", new { productItem });
+            @Html.Sitecore().Rendering(Model.ProductCardRendering, new { productItem });
         }
     </div>
 </div>
