Added require.js clientside dependency

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -41,7 +41,8 @@
 			@Html.Sitecore().Placeholder("footer")
 		</footer>
 	</div>
-	<script src="~/Scripts/jquery-3.0.0.min.js"></script>
+    <script src="~/Scripts/require-2.3.2.min.js"></script>
+    <script src="~/Scripts/jquery-3.0.0.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
 	<script src="~/Scripts/uCommerce.facets.js"></script>
 	<script src="~/Scripts/js-add-to-basket-button.js"></script>
