--- a/src/AvenueClothing.Project.Transaction/Views/QuantityPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/QuantityPicker/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.ViewModels.QuantityPickerRenderingViewModel
+﻿@model AvenueClothing.Project.Transaction.ViewModels.QuantityPickerRenderingViewModel
 
 @{
     Layout = null;
