--- a/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.ViewModels.VariantPickerRenderingViewModel
+﻿@model AvenueClothing.Project.Transaction.ViewModels.VariantPickerRenderingViewModel
 @{
     Layout = null;
 }
