Fix after merge.

--- a/src/AvenueClothing.Feature.Catalog/Views/ProductPrimaryImage/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog/Views/ProductPrimaryImage/Rendering.cshtml
@@ -1,5 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductPrimaryImageViewModel
-
+﻿@model AvenueClothing.Feature.Catalog.ViewModels.ProductPrimaryImageViewModel
 @{
 	Layout = null;
 }
