--- a/src/AvenueClothing.Feature.Catalog/Views/CategoryImage/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog/Views/CategoryImage/Rendering.cshtml
@@ -1,4 +1,4 @@
-﻿@model AvenueClothing.Feature.Catalog.Module.ViewModels.CategoryImageViewModel
+﻿@model AvenueClothing.Feature.Catalog.ViewModels.CategoryImageViewModel
 @{
 	Layout = null;
 }
