--- a/src/AvenueClothing.Feature.Catalog/Views/ProductDetail/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog/Views/ProductDetail/Rendering.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sitecore.Mvc
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.ProductDetailViewModel
+@model AvenueClothing.Feature.Catalog.ViewModels.ProductDetailViewModel
 @{
 	Layout = null;
 }
