--- a/src/AvenueClothing.Feature.Catalog/Views/PromotedProducts/Rendering.cshtml
+++ b/src/AvenueClothing.Feature.Catalog/Views/PromotedProducts/Rendering.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Sitecore.Mvc
-@model AvenueClothing.Feature.Catalog.Module.ViewModels.PromotedProductsViewModel
+@model AvenueClothing.Feature.Catalog.ViewModels.PromotedProductsViewModel
 @{
 	Layout = null;
 }
