--- a/src/AvenueClothing.Feature.Catalog/Views/Renderings/Searchbar.cshtml
+++ b/src/AvenueClothing.Feature.Catalog/Views/Renderings/Searchbar.cshtml
@@ -1,8 +1,4 @@
-﻿@using System.Web.Mvc
-@using System.Web.Mvc.Html
-
-
-<form id="search-form" class="pull-xs-left form-inline navbar-form" action="/search">
+﻿<form id="search-form" class="pull-xs-left form-inline navbar-form" action="/search">
     <div class="input-append input-group">
         <input id="site-search" type="text" name="search" class="form-control" placeholder="Search the store" />
         <span class="input-group-btn">
