--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
@@ -1,6 +1,4 @@
-﻿@using Sitecore.Mvc
-@model AvenueClothing.Project.UserFeedback.ViewModels.ReviewListRenderingViewModel
-
+﻿@model AvenueClothing.Project.UserFeedback.ViewModels.ReviewListRenderingViewModel
 @{
     Layout = null;
 }
