--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -103,7 +103,29 @@
     });
     </script>
 }
-    @Scripts.Render("~/bundles/js-components-old")
+    
+    <script>
+        //legacy - should be removed
+        require(['jquery'], function ($) {
+
+            var script = document.createElement("script");
+            script.type = "text/javascript";
+            script.src = '@Scripts.Url("~/bundles/js-components-old").ToString()';
+            document.body.appendChild(script);
+
+            $(document).ready(function () {
+                VariantPicker.init($(document), $("*"));
+                MiniBasket.init($(document), $("*"));
+                ShippingPicker.init($(document), $("*"));
+                PriceCalculation.init($(document), $("*"));
+                PaymentPicker.init($(document), $("*"));
+                Addresses.init($(document), $("*"));
+                Voucher.init($(document), $("*"));
+                ShippingPicker.initCompleted($(document), $("*"));
+                PaymentPicker.initCompleted($(document), $("*"));
+                });
+        });
+    </script>
 </body>
 
 </html>
