ReviewForm javascript is now a require.js module

--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
@@ -9,7 +9,7 @@
 <h5>Send Us Your Review</h5>
 <div class="control-group">
     <label class="control-label" for="review-rating">Rating</label>
-    <div class="controls rating">
+    <div class="controls js-review-form">
         <label><input type="radio" name="Rating" value="1" /><i class="fa fa-star"></i></label>
         <label><input type="radio" name="Rating" value="2" /><i class="fa fa-star"></i></label>
         <label><input type="radio" name="Rating" value="3" /><i class="fa fa-star"></i></label>
