Added init-completed event for js module post init checking

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -107,6 +107,11 @@
         });
     </script>
 }
+<script>
+    require(['jsConfig'], function (config) {
+        config.$triggerEventSelector.trigger("init-completed", data);
+    });
+</script>
 </body>
 
 </html>
