Change when bundling is enabled

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -30,7 +30,7 @@
             }
         });
     </script>
-    @if (!HttpContext.Current.IsDebuggingEnabled)
+    @if (BundleTable.EnableOptimizations)
     {
         <script>
             requirejs.config({
