--- a/src/AvenueClothing.Project.Catalog/Views/Facets/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/Facets/Rendering.cshtml
@@ -9,7 +9,7 @@
 		@foreach (var value in facet.FacetValues)
 		{
 			<label>
-				<input type="checkbox" data-selector="js-facets" data-facets-name="@facet.Name" data-facets-value="@value.FacetValueName">
+				<input type="checkbox" class="js-facets" data-facets-name="@facet.Name" data-facets-value="@value.FacetValueName">
 				@value.FacetValueName (@value.FacetValueHits)
 			</label>
 		}
