Create async price calculation for product list and extended existing js to multi prices.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
@@ -14,8 +14,14 @@
     <p class="item-name">
         <a href="@Model.Url">@Model.DisplayName</a>
     </p>
+	
+	<aside class="js-price-calculation @Model.ProductPriceRenderingViewModel.ProductId" data-price-calculation-url="@Model.ProductPriceRenderingViewModel.CalculatePriceUrl" data-variant-price-calculation-url="@Model.ProductPriceRenderingViewModel.CalculateVariantPriceUrl" data-product-sku="@Model.ProductPriceRenderingViewModel.Sku" data-product-id="@Model.ProductPriceRenderingViewModel.ProductId" data-category-guid="@Model.ProductPriceRenderingViewModel.CategoryGuid" data-catalog-guid="@Model.ProductPriceRenderingViewModel.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
+		<p class="item-price @Model.ProductPriceRenderingViewModel.ProductId" itemprop="price"></p>
+		<p class="item-tax">
+			<small class="tax">Inc. </small>
+		</p>
+	</aside>
 
-	<p class="item-price">@Model.Amount</p>
 	<p class="btn-group view-details">
 		<a href="@Model.Url" class="btn btn-default">
 			View more <span>
