--- a/src/AvenueClothing.Project.Catalog/Views/ProductPrice/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPrice/Rendering.cshtml
@@ -3,9 +3,9 @@
     Layout = null;
 }
 
-<aside class="col-md-5 js-price-calculation" data-price-calculation-url="@Model.CalculatePriceUrl" data-variant-price-calculation-url="@Model.CalculateVariantPriceUrl" data-product-sku="@Model.Sku" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
-    <p class="item-price" itemprop="price"></p>
-    <p class="item-tax">
-        <small class="tax">Inc. </small>
-    </p>
+<aside class="js-price-calculation" data-price-calculation-url="@Model.CalculatePriceUrl" data-variant-price-calculation-url="@Model.CalculateVariantPriceUrl" data-product-sku="@Model.Sku" data-product-id="@Model.ProductId" data-category-guid="@Model.CategoryGuid" data-catalog-guid="@Model.CatalogGuid" itemprop="offers" itemscope itemtype="http://schema.org/Offer" data>
+	<p class="item-price @Model.ProductId" itemprop="price"></p>
+	<p class="item-tax">
+		<small class="tax">Inc. </small>
+	</p>
 </aside>
