--- a/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
@@ -6,11 +6,14 @@
 @foreach (var variant in Model.Variants)
 {
     <div>@variant.DisplayName</div>
-    <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
-        <option value="">-- Please Select --</option>
-        @foreach (var variantItem in variant.VaraintItems)
-        {
-            <option value="@variantItem.Name">@variantItem.DisplayName</option>
-        }
-    </select>
+    <div class="dropdown">
+        <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
+            <option class="dropdown-menu" value="">-- Please Select --</option>
+            @foreach (var variantItem in variant.VaraintItems)
+            {
+                <option class="dropdown-item" value="@variantItem.Name">@variantItem.DisplayName</option>
+            }
+
+        </select>
+    </div>
 }
